# EldenTree

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md
benchmark/: CMakeLists.txt  benchmark.cpp
cmake/: ClangFormat.cmake
doc/: CMakeLists.txt
example/: CMakeLists.txt  example1.cpp
example/ex1/: example1.cpp
example/ex2/: CMakeLists.txt  example2.cpp
include/: EldenTree.hpp  God.hpp  logger.hpp  types.hpp
include/et/: eldentree.hpp
linRelease-ninja-build/: .ninja_deps  .ninja_log  CMakeCache.txt  DartConfiguration.tcl  build.ninja  cmake_install.cmake
linRelease-ninja-build/doc/: Doxyfile.doc  cmake_install.cmake
linRelease-ninja-build/doc/html/: _god_8hpp.html  _god_8hpp.js  _god_8hpp_source.html  annotated.html  annotated_dup.js  classes.html  classet_1_1_elden_tree-members.html  classet_1_1_elden_tree.html  classet_1_1_elden_tree.js  dir_316021a6ae9db42f7a0b34eb003cf8a2.html  dir_316021a6ae9db42f7a0b34eb003cf8a2.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  eldentree_8hpp.html  eldentree_8hpp.js  eldentree_8hpp_source.html  et_2eldentree_8hpp.html  et_2eldentree_8hpp_source.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  index.html  logger_8hpp.html  logger_8hpp.js  logger_8hpp_source.html  menudata.js  namespaceet.html  namespaceet.js  namespaceet_1_1god.html  namespaceet_1_1god.js  namespacemembers.html  namespacemembers_type.html  namespaces.html  namespaces_dup.js  namespacestd.html  (+15 more)
linRelease-ninja-build/doc/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  files_0.js  files_1.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  namespaces_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js
linRelease-ninja-build/example/: basic_example  cmake_install.cmake
linRelease-ninja-build/src/: cmake_install.cmake
linRelease-ninja-build/tests/: CTestTestfile.cmake  cmake_install.cmake  test1
src/: CMakeLists.txt  EldenTree.cpp  logger.cpp
tests/: CMakeLists.txt  test1.cpp
